# autonomous-sales-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude-flow/sessions/: current.json  session-1780233238772.json  session-1780264147186.json
ai-logging/: claude-planner-conversation.md  prompt_logger.py
docker/: entrypoint.sh
docs/: belief-state-schema.md  change-board.md  conversation-update-loop.md
docs/brainstorms/: 2026-05-31-autonomous-voice-sales-agent-requirements.md
docs/deliverables/: decision-log.md  demo-runbook.md  failure-mode-report.md  limitations-memo.md  recursive-improvement.md  research-notes.md
docs/design/: dashboard-ia-spec.md
docs/plans/: 2026-05-31-001-feat-voice-sales-agent-plan.md
migrations/: 001_init.sql  002_kb.sql  003_experiments.sql
scripts/: ensure_kb.py  run_migrations.py  run_one_sim.py  seed_demo.py  setup_sip_dispatch.py  smoke_real_llm.py  time_turn.py
src/: __init__.py
src/api/: __init__.py  demo_routes.py  improve.py  labels.py  operate.py  persistence.py  replay_routes.py  server.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  belief_state.py  cost.py  dst.py  gates.py  llm.py  nlg.py  policy.py  respond.py
src/kb/: __init__.py  embeddings.py  ingest.py  live.py  retriever.py
src/loop/: __init__.py  _stats.py  experiment.py  generator.py  grading.py  promotion.py  replay.py  sim2real.py  validation.py
src/memory/: __init__.py  hydrate.py  schema.py  store.py
src/sim/: __init__.py  eval_personas.py  personas.py  prospect.py  selfplay.py  twin.py
src/voice/: __init__.py  agent.py  consent.py  escalation.py  session.py  worker.py
tests/: conftest.py
tests/e2e/: __init__.py  qa7_cb54.py  qa7_cb55.py  qa7_cb57.py  qa7_cb60.py  qa7_cb61_replay.py  qa7_cb65_leaksweep.py  qa7_cb66.py  qa7_round4_confirm.py  qa7_streaming_stress.py  qa9fix_lab.py  qa9fix_ops.py  smoke_cb05_cb06.py  test_cb54_consent_session.py  test_cb59_champion.py  test_cb60_coherence.py  test_cb63_chat_stream.py  test_cb66_operate_polish.py  test_demo_call.py  test_demo_duration_outcome.py  test_demo_generated_stream.py  test_fidelity.py  test_improve.py  test_live_monitor.py  test_live_persistence.py  test_live_rag_persistence.py  test_operate.py  test_replay_routes.py  verify_cb05_cb06_screens.py  verify_demo_button.py  verify_wave1.py  verify_wave2.py
tests/integration/: __init__.py  test_escalation.py  test_grading.py  test_kb.py  test_loop.py  test_memory.py  test_persistence.py  test_respond.py  test_selfplay.py  test_sim2real.py  test_store.py  test_validation.py  test_voice_adapter.py  test_voice_sim.py  (+1 more)
web/: .env.local.example  .gitignore  .railwayignore  README.md  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
(+102 files in other folders)
