# Project metadata + dependencies for the autonomous sales agent (Python backend / core / loop).
# The web dashboard lives under web/ with its own package.json. Versions are provisional and
# pinned loosely; they get firmed up as each unit integrates the real library.
[project]
name = "autonomous-sales-agent"
version = "0.0.0"
description = "Autonomous voice AI sales agent for tutoring with a self-improving loop"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "asyncpg>=0.29",
    "pgvector>=0.2",
    "python-dotenv>=1",
    "anthropic>=0.40",
    "httpx>=0.27",
    # The demo/dashboard API service (deployable surface) — needed by `python -m uvicorn src.api.server:app`.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# Live LiveKit voice worker (src/voice/worker.py): ElevenLabs Scribe STT + ElevenLabs TTS + silero VAD
# + the openai plugin for the LLM node. Deepgram was DROPPED (ElevenLabs does STT); keep it out.
voice = [
    "livekit-agents>=1.5",
    "livekit-plugins-elevenlabs>=1.5",
    "livekit-plugins-silero>=1.5",
    "livekit-plugins-openai>=1.5",
]
# Live grounded RAG: the local sentence-transformers embedder (BAAI/bge-small-en-v1.5). Tests use the
# deterministic FakeEmbedder and do NOT need this; the deployed product with live_rag=True does.
rag = ["sentence-transformers>=3"]
sim = ["openai>=1.40"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.11"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
